--- a/tests/integration-tests/configs/p4d-multinics.yaml
+++ b/tests/integration-tests/configs/p4d-multinics.yaml
@@ -1,6 +1,6 @@
 {%- import 'common.jinja2' as common -%}
-  {%- set regions = ["us-east-1"] -%}
-  {%- set instances = ["p4d.24xlarge"] -%}
+{%- set regions = ["use1-az6"] -%}   # do not move, unless capacity reservation is moved as well
+{%- set instances = ["p4d.24xlarge"] -%}
 
 ---
 test-suites:
