--- a/tests/integration-tests/configs/common/common.yaml
+++ b/tests/integration-tests/configs/common/common.yaml
@@ -302,7 +302,7 @@ efa:
         instances: ["c6gn.16xlarge"]
         oss: ["alinux2", "ubuntu1804", "ubuntu2004"]
         schedulers: ["slurm"]
-      - regions: [ "us-east-2" ]
+      - regions: ["use2-az2"]  # do not move, unless instance type support is moved as well
         instances: [{{ common.instance("instance_type_1") }}]
         oss: [ "alinux2", "centos7", "ubuntu2004" ]
         schedulers: [ "slurm" ]
@@ -486,7 +486,7 @@ schedulers:
         oss: ["alinux2"]
         schedulers: ["slurm_plugin"]
 {%- endif %}
-      - regions: [ "us-east-2" ]
+      - regions: ["use2-az2"]  # do not move, unless instance type support is moved as well
         instances: [{{ common.instance("instance_type_1") }}]
         oss: [ "alinux2" ]
         schedulers: [ "slurm" ]
