--- a/cloudformation/policies/parallelcluster-policies.yaml
+++ b/cloudformation/policies/parallelcluster-policies.yaml
@@ -408,7 +408,12 @@ Resources:
               - cloudwatch:PutDashboard
               - cloudwatch:ListDashboards
               - cloudwatch:DeleteDashboards
-              - cloudwatch:GetDashboard
+              - cloudwatch:GetDashboar
+              - cloudwatch:PutMetricAlarm
+              - cloudwatch:DeleteAlarms
+              - cloudwatch:DescribeAlarmHistory
+              - cloudwatch:DescribeAlarms
+              - cloudwatch:DescribeAlarmsForMetric
             Resource: '*'
             Effect: Allow
             Condition: !If
