[Multi User] Add support for AD password as SSM Parameter.
Signed-off-by: Giacomo Marciani <mgiacomo@amazon.com>

--- a/tests/iam_policies/user-role.cfn.yaml
+++ b/tests/iam_policies/user-role.cfn.yaml
@@ -498,6 +498,16 @@ Resources:
             Resource: '*'
             Effect: Allow
             Sid: ResourceGroupRead
+          - Action:
+              - !Sub arn:${AWS::Partition}:secretsmanager:${Region}:${AWS::AccountId}:secret:*
+            Resource: '*'
+            Effect: Allow
+            Sid: DirectoryServicePasswordReadFromSecretsManager
+          - Action:
+              - !Sub arn:${AWS::Partition}:ssm:${Region}:${AWS::AccountId}:parameter/
+            Resource: '*'
+            Effect: Allow
+            Sid: DirectoryServicePasswordReadFromSsm
 
   ### IMAGE ACTIONS POLICIES
 
