[Integ-tests] Improve ARNs in integration tests to be compatible with other AWS partitions
1. Add a default variable (AWS partition) to cluster configuration file Jinja template.
2. Add partition variable in Cluster object
3. AD test, Slurm accounting, and tranium tests are not changed. Because we do not need to let them run in other partitions for now

Signed-off-by: Hanwen <hanwenli@amazon.com>

--- a/tests/integration-tests/tests/schedulers/test_slurm/test_slurm_memory_based_scheduling/pcluster.config.mem-based-scheduling.yaml
+++ b/tests/integration-tests/tests/schedulers/test_slurm/test_slurm_memory_based_scheduling/pcluster.config.mem-based-scheduling.yaml
@@ -8,7 +8,7 @@ HeadNode:
     KeyName: {{ key_name }}
   Iam:
     AdditionalIamPolicies:
-      - Policy: arn:aws:iam::aws:policy/AmazonSSMManagedInstanceCore
+      - Policy: arn:{{partition}}:iam::aws:policy/AmazonSSMManagedInstanceCore
 Scheduling:
   Scheduler: slurm
   SlurmSettings:
