--- a/tests/integration-tests/tests/scheduler_plugin/test_scheduler_plugin/test_scheduler_plugin_integration/scheduler_queues_x86_64.yaml
+++ b/tests/integration-tests/tests/scheduler_plugin/test_scheduler_plugin/test_scheduler_plugin_integration/scheduler_queues_x86_64.yaml
@@ -40,10 +40,10 @@
       EphemeralVolume: null
       RootVolume:
         Encrypted: true
-        Iops: 3000
         Size: null
-        Throughput: 125
-        VolumeType: gp3
+        VolumeType: { % if "-iso" in region % }gp2{ % else % }gp3{ % endif % }
+        Throughput: { % if "-iso" in region % }null{ % else % }125{ % endif % }
+        Iops: { % if "-iso" in region % }null{ % else % }3000{ % endif % }
   CustomActions: null
   CustomSettings: null
   Iam:
@@ -91,8 +91,8 @@
         Encrypted: true
         Iops: 3000
         Size: null
-        Throughput: 125
-        VolumeType: gp3
+        VolumeType: { % if "-iso" in region % }gp2{ % else % }gp3{ % endif % }
+        Throughput: { % if "-iso" in region % }null{ % else % }125{ % endif % }
   CustomActions: null
   CustomSettings: null
   Iam:
