--- a/tests/iam_policies/user-role.cfn.yaml
+++ b/tests/iam_policies/user-role.cfn.yaml
@@ -504,14 +504,12 @@ Resources:
             Resource: '*'
             Effect: Allow
             Sid: ResourceGroupRead
-          - Action:
-              - !Sub arn:${AWS::Partition}:secretsmanager:${Region}:${AWS::AccountId}:secret:*
-            Resource: '*'
+          - Action: "secretsmanager:GetSecretValue"
+            Resource: !Sub arn:${AWS::Partition}:secretsmanager:${Region}:${AWS::AccountId}:secret:*
             Effect: Allow
             Sid: DirectoryServicePasswordReadFromSecretsManager
-          - Action:
-              - !Sub arn:${AWS::Partition}:ssm:${Region}:${AWS::AccountId}:parameter/
-            Resource: '*'
+          - Action: "ssm:GetParameter"
+            Resource: !Sub arn:${AWS::Partition}:ssm:${Region}:${AWS::AccountId}:parameter/*
             Effect: Allow
             Sid: DirectoryServicePasswordReadFromSsm
 
